# shakespeare_mlm

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  dataset.py  main.py  model.py  pyproject.toml  report.py  tokenizer.py  train.py
src/shakespeare_mlm/: config.py  dataset.py  main.py  report.py  tokenizer.py  train.py
