[project]
name = "shakespeare-mlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pyrefly>=1.0.0",
    "ruff>=0.15.17",
]
