[project]
name = "shakespeare-mlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asciichartpy>=1.5.25",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "prek>=0.4.4",
    "pyrefly>=1.0.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["model", "tokenizer", "dataset", "train", "report"]

[tool.pyrefly]
python-version = "3.12"
